# test-pypi-deploy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-to-pypi.yml  python_ci.yml
src/testdeployofpypi/: exampleclass.py  otherexample.py
src/testdeployofpypi/examples/: coolexample.py
testdeployofpypi/: exampleclass.py  otherexample.py
testdeployofpypi/examples/: __init__.py  coolexample.py
tests/: __init__.py  example_test.py  exampletest.py
