[project]
name = "testdeployofpypi"
version = "0.1.0"
description = "Test package to test CD pipeline in github actions with trusted publisher."
authors = [
    {name = "Nick van der Burgt",email = "nvanderburgt@infiniot.nl"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "ruff (>=0.11.3,<0.12.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]
maintainers = [
]
license = {text = "MIT"}
keywords = ["test"]

[project.urls]
repository = "https://github.com/nicburgt/test-pypi-deploy"
documentation = "https://github.com/nicburgt/test-pypi-deploy/tree/main/docs"
"Bug Tracker" = "https://github.com/nicburgt/test-pypi-deploy/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["src.exampleclass", "src.otherexample"]
ignore_missing_imports = true
